--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -19,7 +20,17 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
+    "react-tsparticles": "^2.12.2",
+    "reveal-on-scroll-react": "^0.0.6",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tsparticles-slim": "^2.12.0",
+    "typescript": "5.2.2",
+    "typewriter-effect": "^2.20.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
